# python-pro

./: pyproject.toml
afk/: not_afk.py
async/: contador.py  flags.py
asynci/: flags.py  flags_asyncio.py  flags_threadpool.py  loop.py  loop_assincrono.py  spinner_asyncio.py  spinner_thread.py
descriptors/: framework.py  s1.py  s2.py  s3.py  s4.py  s5.py  s6.py  s7.py
exemplos/: atr_funcao.py  closure.py  dit2obj.py  divisao_por_2.py  fatorial.py  jquery.py  logar.py  obj_invocavel.py  rima.py  timer.py  vetor.py
exercicios/: fizzbuzz.py  test_fizzbuzz.py
oopy/: __init__.py  arvore_binaria.py  baralho.py  cao.py  cao_test.rst  carta.py  class_decorator.py  encapsulamento_property.py  iterator_genator.py  iterator_gof.py  iterator_list_comprehension.py  matriz.md  matriz.py  protocolo_sequencia.py  relogio.py
programacao_funcional/decorador/: closure.py  contador.py  funcoes_marcadas.py  tempo.py
programacao_funcional/decorador/exercicio/: flaks.py  relogio.py
programacao_funcional/funcao_como_objeto/: argumento.py  filtro_mapa.py  ordenacao.py
programacao_funcional/funcao_como_objeto/exercicios/: fibonacci.py  ordenar_por_nota_e_nome.py
programacao_funcional/namespaces/: namespace_global.py  tipos.py
python_patterns/comportamental/composite/: composite.py
python_patterns/comportamental/strategy/: pedido.py  promocao.py
python_patterns/estrutural/: adaptador.py
pythonist/api/: app.py  test_app.py
pythonist/flask/: app.py  test.py
pythonist/flask_ingles/: app.py  test.py
tombola/: README.md  test_tombola.py  tombola.py
(+7 files in other folders)
