[tool.poetry]
name = "python-pro"
version = "0.1.0"
description = ""
authors = ["Matheus Cardoso <matheuscbsmsn1994@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pythonist" },
    { include = "programacao_funcional" }
]

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
decorator = "^5.1.1"
flask = "^3.1.0"
tk-tools = "^0.16.0"
pytest = "^8.3.4"
requests = "^2.32.3"
requests-mock = "^1.12.1"
aiohttp = "^3.11.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["E501", "W504"]

[tool.pylance]
reportMissingImports = true
reportMissingModuleSource = true
